# YT

./: .gitignore  README.md  adjsut2.py  adjust_estimated_earnings.py  b.py  bdi_singers.json  bdi_yt-tv-channels.json  burundian_singer_channel_ids.json  c.py  job-yt-airtable.py  job2-yt-statistics-airtable.py  job3-airtable-visualization.py  job3-prime-airtable-visualization.py  pyproject.toml  read-singers-names.py  requirements.txt  setup.py  test-job3.py  test_adjust_estimated_earnings.py  update_estimated_earnings.py  yt-airtable.py  yt-channel-ids-test.py  yt-channel-ids.py  yt-statistics-test.py  yt_statistics_airtable.py
.github/workflows/: earnings_estimate_job.yml  main.yml  yt_stats_job.yml
airtable-data-for-adjustments/: Table 1-Grid view.csv
channel-id-data/: burundian_singer_channel_ids.json
scripts/: latest_video_release.py  update_estimated_earnings.py  yt_airtable_central.py  yt_channel_ids.py  yt_statistics_airtable.py
src/: airtable_data_model.py  run_yt_airtable_model.py  yt_data_model.py
tests/: test_*.py  unitest.py
tests/unit_tests/: test_airtable_data_model.py  test_yt_airtable_pipeline.py  test_yt_data_model.py
visualization-scripts/: test_latest_video-release.py
